force-app/main/default/objects/redwing__Blank__c/redwing__Blank__c.object-meta.xml
<CustomObject>
    <label>Blank</label>
    <nameField>
        <label>Blank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blanks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>