force-app/main/default/objects/redwing__Blank__c/fields/redwing__Length__c.field-meta.xml
<CustomField>
    <fullName>redwing__Length__c</fullName>
    <inlineHelpText>Input size (in characters) of the answer field for users.</inlineHelpText>
    <label>Length</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>