force-app/main/default/objects/redwing__Blank__c/fields/redwing__Question__c.field-meta.xml
<CustomField>
    <fullName>redwing__Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Question record.</inlineHelpText>
    <label>Question</label>
    <referenceTo>redwing__Question__c</referenceTo>
    <relationshipLabel>Blanks</relationshipLabel>
    <relationshipName>Blanks</relationshipName>
    <type>Lookup</type>
</CustomField>